# Symposium

./: .cursorrules  .env.example  .gitignore  1_ResearchersProfile_Generator.py  2_Projects_creation.py  2_ResearchersMethods_Generator.py  3_Projects_creation.py  AGENTS.md  OpenRouter_Methods.py  PCA_ENHANCEMENT_SUMMARY.md  README.md  UV_SETUP.md  config.example.json  example_calendar.py  launch.py  merger.py  pyproject.toml  run.py  setup.py  symposium.sh
Catechism/: EUGrants.md  KarmaGAPGrants.md
ISM_Stream/: 5_ISM_Collab_Catechisms.py  6_Visualize_ISM.py  ISM_README.md  System_Prompts.json
Perplexity/: 1_Research_Presenters.py  2024 Symposium Participant Registration (Public Share).csv  2_Research_Participants.py  3_Draft_Personalized_Program.py  4_ActInf_Applications.py  README.md  System_Prompts.json  participants.json  test_api.py
Scripts/: OpenSourceLLM.py
archive/ism_stream/: README.md
data/: AGENTS.md  README.md
docs/: API_USAGE.md  CONTRIBUTING.md  MIGRATION.md  PERPLEXITY_RESEARCH.md  api_guide.md  architecture.md  csv_visualization_guide.md  development.md  installation.md  user_guide.md
ideasAIF/: services.txt
output/: AIFRoadMap.md  AIFSymposiumRoadMap.md  AIFTechTree.md  AIFcritics.md  SymposiumTalks.md
personalization/: setupLLM.txt
prompts/: project.txt  raoadmap2agents.txt
publications/: participants.txt
synthetic/: abstract.txt  merged_research_profiles.md
test_pca_output/: test_pca_loadings_table.csv
tests/: .pytestignore  AGENTS.md  README.md  __init__.py  conftest.py  test_2025_participants.py  test_participant_pipeline.py
(+2416 files in other folders)
